[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
setuptools = "69.0.3"
colorama = "0.4.6"
Flask = "2.3.2"
Flask-SocketIO = "5.3.4"
importlib-metadata = "6.8.0"
numpy = "1.24.3"
openai = "1.3.3"
regex = "2023.6.3"
requests = "2.31.0"
tenacity = "8.2.2"
tiktoken = "0.4.0"
virtualenv = "20.23.0"
Werkzeug = "2.3.6"
Markdown = "3.4.4"
Pillow = "10.1.0"
# Wikipedia-API = "0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
